# NECoS

./: .clang-format  CMakeLists.txt  README.md
cmake/: NECoSConfig.cmake.in  version.h.in
include/necos/: Engine.hpp  ISystem.hpp
include/necos/event/: ComponentEvents.hpp  EntityEvents.hpp  EventEmitter.hpp  SystemEvents.hpp
include/necos/internal/: ComponentContainer.hpp
include/necos/manager/: ComponentManager.hpp  EntityManager.hpp  EventManager.hpp  SystemManager.hpp
include/necos/utils/: EngineSettings.hpp  Signature.hpp  TypeSet.hpp
include/necos/utils/id/: Id.hpp  TypeIdFamily.hpp
include/necos/utils/id/allocator/: ReusableIdAllocator.hpp  SingleUseIdAllocator.hpp
src/: Allocator.cpp
tests/: CMakeLists.txt
tests/include/NecosTests/: TestsHeader.hpp
tests/include/NecosTests/Managers/: ComponentTests.hpp  EntityTests.hpp  EventTests.hpp  SystemTests.hpp
tests/include/NecosTests/Resources/: Components.hpp  EngineSettings.hpp  Events.hpp  Systems.hpp
tests/include/NecosTests/Utils/: ContainerTests.hpp  SignatureTests.hpp  TypeSetTests.hpp
tests/src/: NecosTests.cpp
